--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,17 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: slategray;
+  border-radius: 5px;
+}
